adding some animations when scrolling, not working for project section at the moment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 
     <!-- VENDOR CSS FILES -->
-    <link rel="stylesheet" type="text/css" href="vendors/css/simplegrid.css" />
+    <link rel="stylesheet" type="text/css" href="vendors/css/simplegrid.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
 
     <!-- FAVICONS -->
 
@@ -70,10 +71,10 @@
         <h2>About me</h2>
         <div class="row">
             <div class="flexbox">
-                <div class="about-image-box">
+                <div class="about-image-box js--wp-1">
                     <img class="profile-image" src="resources/images/placeholder.jpg" alt="profile-image.jpg">
                 </div>
-                <div class="about-text-box">
+                <div class="about-text-box js--wp-2 delay-25s">
                     <h3>Software<br>
                         <span>Developer</span></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>
@@ -89,44 +90,44 @@
         <h2>Skills</h2>
         <div class="row">
             <div class="flexbox">
-                <div class="box">
+                <div class="box js--wp-3">
                     <i class="fas fa-gamepad"></i>
                     <h3>Game Development</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-25s">
                     <i class="fab fa-java"></i>
                     <h3>Java / C#</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-50s">
                     <i class="fab fa-html5"></i>
                     <h3>HTML5</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-75s">
                     <i class="fab fa-css3-alt"></i>
                     <h3>CSS3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
             </div>
             <div class="flexbox">
-                <div class="box">
+                <div class="box js--wp-3 delay-1s">
                     <i class="fas fa-cogs"></i>
                     <h3>Machine Learning</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-125s">
                     <i class="fas fa-robot"></i>
                     <h3>Artificial Intelligence</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-150s">
                     <i class="fas fa-shield-alt"></i>
                     <h3>IT-Security</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-                <div class="box">
+                <div class="box js--wp-3 delay-175s">
                     <i class="fab fa-python"></i>
                     <h3>Python</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -142,47 +143,47 @@
             <div class="timeline">
                 <ul>
                     <li>
-                        <div class="timeline-content">
+                        <div class="timeline-content js--wp-4">
                             <h3>What is lorem Ipsum?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. Donec felis diam, semper nec dignissim ultricies, lobortis eget eros. </p>
                         </div>
-                        <div class="timeline-time">
+                        <div class="timeline-time js--wp-5">
                             <h4>January 2018</h4>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-content">
+                        <div class="timeline-content js--wp-6">
                             <h3>What is lorem Ipsum?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
                         </div>
-                        <div class="timeline-time">
+                        <div class="timeline-time js--wp-7">
                             <h4>January 2018</h4>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-content">
+                        <div class="timeline-content js--wp-8">
                             <h3>What is lorem Ipsum?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. Donec felis diam, semper nec dignissim ultricies, lobortis eget eros. </p>
                         </div>
-                        <div class="timeline-time">
+                        <div class="timeline-time js--wp-9">
                             <h4>January 2018</h4>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-content">
+                        <div class="timeline-content js--wp-10">
                             <h3>What is lorem Ipsum?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
                         </div>
-                        <div class="timeline-time">
+                        <div class="timeline-time js--wp-11">
                             <h4>January 2018</h4>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-content">
+                        <div class="timeline-content js--wp-12">
                             <h3>What is lorem Ipsum?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
                         </div>
-                        <div class="timeline-time">
+                        <div class="timeline-time js--wp-13">
                             <h4>January 2018</h4>
                         </div>
                     </li>
@@ -326,27 +327,27 @@
                 </div>
             </div>
             <div class="flexbox">
-                <div class="box">
+                <div class="box js--wp-15">
                     <div class="blue"></div>
                 </div>
-                <div class="box">
+                <div class="box js--wp-15 delay-25s">
                     <div class="red"></div>
                 </div>
             </div>
             <div id="more-projects">
                 <div class="flexbox">
-                    <div class="box">
+                    <div class="box js--wp-16">
                         <div class="red"></div>
                     </div>
-                    <div class="box">
+                    <div class="box js--wp-16 delay-25s">
                         <div class="blue"></div>
                     </div>
                 </div>
                 <div class="flexbox">
-                    <div class="box">
+                    <div class="box js--wp-17">
                         <div class="blue"></div>
                     </div>
-                    <div class="box">
+                    <div class="box js--wp-17 delay-25s">
                         <div class="red"></div>
                     </div>
                 </div>
@@ -361,23 +362,25 @@
         <div class="row">
             <div class="contact-container">
                 <form>
-                    <div>
+                    <div class="js--wp-18">
                         <input type="text" name="" required="">
                         <label>Name</label>
                     </div>
-                    <div>
+                    <div class="js--wp-18 delay-25s">
                         <input type="text" name="" required="">
                         <label>E-mail</label>
                     </div>
-                    <div>
+                    <div class="js--wp-18 delay-50s">
                         <input type="text" name="" required="">
                         <label>Subject</label>
                     </div>
-                    <div>
+                    <div class="js--wp-18 delay-75s">
                         <textarea required=""></textarea>
                         <label>Message</label>
                     </div>
-                    <input type="submit" name="" value="Submit">
+                    <div class="js--wp-18 delay-1s">
+                        <input type="submit" name="" value="Submit">
+                    </div>
                 </form>
             </div>
         </div>
@@ -412,15 +415,17 @@
 
 <!------- JAVASCRIPTS AT THE END FOR OPTIMIZED LOADING -------->
 
-<!------------------- JQUERY ---------------------->
+<!------------------------- JQUERY ---------------------------->
 <script src="vendors/js/jquery-3.4.1.min.js"></script>
+
+<!------------------- VENDOR JAVASCRIPTS ---------------------->
+<script src="vendors/js/jquery.waypoints.min.js"></script>
+<script src="vendors/js/inview.min.js"></script>
 
 <!------------------- FONT AWESOME ICONS ---------------------->
 <script src="https://kit.fontawesome.com/5c07e5c24f.js" crossorigin="anonymous"></script>
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
 <script src="resources/js/jquery.js"></script>
-<script src="/resources/js/script.js"></script>
-<script src="resources/js/slideshow.js"></script>
-
-</html>
+<script src="resources/js/script.js"></script>
+<script src="resources/js/slideshow.js"></script></html>
